Update src/test/java/com/exasol/adapter/dialects/postgresql/PostgreSQLScalarFunctionsIT.java